--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,7 +23,7 @@ brews:
     folder: Formula
 
     homepage: "https://github.com/dirien/minectl"
-    description: "minectl️️ 🗺️ is a cli for creating Minecraft (Java-Version) server on different cloud provider."
+    description: "minectl️️ 🗺️ is a cli for creating Minecraft (java or bedrock) server on different cloud provider."
     license: "Apache License 2.0"
 
 archives:
