--- a/config/java/server-civo.yaml
+++ b/config/java/server-civo.yaml
@@ -4,15 +4,16 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: scaleway
-    region: fr-par-1
-    size: GP1-XS
+    cloud: civo
+    region: LON1
+    size: g3.large
     volumeSize: 100
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft.pub"
   minecraft:
     java:
       xmx: 2G
       xms: 2G
+    edition: java
     properties: |
       level-seed=stackitminecraftrocks
       broadcast-rcon-to-ops=true
@@ -35,7 +36,7 @@ spec:
       level-name=world
       rcon.password=
       player-idle-timeout=0
-      motd=Scaleway Minecraft
+      motd=Civo Minecraft
       query.port=25565
       force-gamemode=false
       rate-limit=0
