--- a/config/java/server-do.yaml
+++ b/config/java/server-do.yaml
@@ -4,15 +4,16 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: civo
-    region: LON1
-    size: g3.large
+    cloud: do
+    region: fra1
+    size: s-4vcpu-8gb
     volumeSize: 100
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft.pub"
   minecraft:
     java:
       xmx: 2G
       xms: 2G
+    edition: java
     properties: |
       level-seed=stackitminecraftrocks
       broadcast-rcon-to-ops=true
@@ -35,7 +36,7 @@ spec:
       level-name=world
       rcon.password=
       player-idle-timeout=0
-      motd=Civo Minecraft
+      motd=DigitalOcean Minecraft
       query.port=25565
       force-gamemode=false
       rate-limit=0
@@ -61,4 +62,4 @@ spec:
       online-mode=true
       enable-status=true
       allow-flight=false
-      max-world-size=29999984
+      max-world-size=
