--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,13 +3,28 @@ name: Build Binary
 on:
   push:
     branches:
-      - 'main'
+      - '*'
     tags:
       - '*'
   pull_request:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+            fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+      - name: Tests
+        run: |
+          make all
   build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
