--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,23 +9,26 @@ on:
   pull_request:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-            fetch-depth: 0
+          fetch-depth: 0
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v2.5.2
       - name: Tests
         run: |
           make all
-  build:
-    needs: test
+  release:
+    needs: build
     runs-on: ubuntu-latest
+    if: success() && startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -37,7 +40,6 @@ jobs:
           go-version: 1.16
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
-        if: success() && startsWith(github.ref, 'refs/tags/')
         with:
           version: latest
           args: release --rm-dist
