update bedrock version -> 1.17.10.04
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/bedrock/server-linode.yaml
+++ b/config/bedrock/server-linode.yaml
@@ -12,7 +12,7 @@ spec:
   minecraft:
     edition: bedrock
     properties: |
-      server-name=Hetzner Minecraft
+      server-name=Linode Minecraft
       gamemode=survival
       force-gamemode=false
       difficulty=normal
