--- a/config/java/server-equinix.yaml
+++ b/config/java/server-equinix.yaml
@@ -4,9 +4,9 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: ovh
-    region: DE1
-    size: b2-7
+    cloud: equinix
+    region: fr
+    size: c3.small.x86
     volumeSize: 100
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft.pub"
   minecraft:
@@ -37,7 +37,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=OVHcloud Minecraft
+      motd=Equinix Minecraft
       query.port=25565
       force-gamemode=false
       rate-limit=0
