--- a/config/bedrock/server-do.yaml
+++ b/config/bedrock/server-do.yaml
@@ -8,9 +8,10 @@ spec:
     region: fra1
     size: s-4vcpu-8gb
     volumeSize: 100
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be.pub"
+    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
   minecraft:
     edition: bedrock
+    version: 1.17.10.04
     properties: |
       server-name=DigitalOcean Minecraft
       gamemode=survival
