--- a/config/bedrock/server-equinix.yaml
+++ b/config/bedrock/server-equinix.yaml
@@ -8,9 +8,10 @@ spec:
     region: fr
     size: c3.small.x86
     volumeSize: 100
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be.pub"
+    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
   minecraft:
     edition: bedrock
+    version: 1.17.10.04
     properties: |
       server-name=Equinix Minecraft
       gamemode=survival
