--- a/config/bedrock/server-linode.yaml
+++ b/config/bedrock/server-linode.yaml
@@ -8,9 +8,10 @@ spec:
     region: eu-central
     size: g6-standard-4
     volumeSize: 100
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be.pub"
+    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
   minecraft:
     edition: bedrock
+    version: 1.17.10.04
     properties: |
       server-name=Linode Minecraft
       gamemode=survival
