--- a/config/bedrock/server-scaleway.yaml
+++ b/config/bedrock/server-scaleway.yaml
@@ -8,9 +8,10 @@ spec:
     region: fr-par-1
     size: GP1-XS
     volumeSize: 100
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be.pub"
+    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
   minecraft:
     edition: bedrock
+    version: 1.17.10.04
     properties: |
       server-name=Scaleway Minecraft
       gamemode=survival
