--- a/config/java/server-hetzner.yaml
+++ b/config/java/server-hetzner.yaml
@@ -8,7 +8,7 @@ spec:
     region: nbg1
     size: cpx31
     volumeSize: 100
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft.pub"
+    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
   minecraft:
     java:
       xmx: 2G
@@ -19,6 +19,7 @@ spec:
         enabled: true
         broadcast: true
     edition: java
+    version: 1.17.1
     properties: |
       level-seed=stackitminecraftrocks
       view-distance=10
