Accept EULA should move into the MinecraftServer manifest
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/bedrock/server-scaleway.yaml
+++ b/config/bedrock/server-scaleway.yaml
@@ -12,6 +12,7 @@ spec:
   minecraft:
     edition: bedrock
     version: 1.17.10.04
+    eula: true
     properties: |
       server-name=Scaleway Minecraft
       gamemode=survival
