--- a/config/bedrock/server-gce.yaml
+++ b/config/bedrock/server-gce.yaml
@@ -12,6 +12,7 @@ spec:
   minecraft:
     edition: bedrock
     version: 1.17.10.04
+    eula: true
     properties: |
       server-name=GCE Minecraft
       gamemode=survival
