--- a/config/java/server-scaleway.yaml
+++ b/config/java/server-scaleway.yaml
@@ -20,6 +20,7 @@ spec:
         broadcast: true
     edition: java
     version: 1.17.1
+    eula: true
     properties: |
       level-seed=stackitminecraftrocks
       view-distance=10
