--- a/config/bedrock/server-ovh.yaml
+++ b/config/bedrock/server-ovh.yaml
@@ -9,6 +9,7 @@ spec:
     size: b2-7
     volumeSize: 100
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+    port: 19132
   minecraft:
     edition: bedrock
     version: 1.17.10.04
@@ -22,7 +23,6 @@ spec:
       max-players=100
       online-mode=true
       white-list=false
-      server-port=19132
       server-portv6=19133
       view-distance=32
       tick-distance=4
