--- a/config/java/server-do.yaml
+++ b/config/java/server-do.yaml
@@ -9,8 +9,10 @@ spec:
     size: s-4vcpu-8gb
     volumeSize: 100
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    port: 25565
   minecraft:
     java:
+      openjdk: 16
       xmx: 2G
       xms: 2G
       rcon:
@@ -28,7 +30,6 @@ spec:
       server-ip=
       resource-pack-prompt=
       gamemode=survival
-      server-port=25565
       allow-nether=true
       enable-command-block=false
       sync-chunk-writes=true
@@ -39,8 +40,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=DigitalOcean Minecraft
-      query.port=25565
+      motd=\u00A7bDigitalOcean \u00A7rMinecraft --- \u00A76Java \u00A7redition
       force-gamemode=false
       rate-limit=0
       hardcore=false
