--- a/config/forge/server-do.yaml
+++ b/config/forge/server-do.yaml
@@ -3,6 +3,8 @@ kind: MinecraftServer
 metadata:
   name: minecraft-server
 spec:
+  monitoring:
+    enabled: true
   server:
     cloud: do
     region: fra1
