--- a/config/fabric/server-civo.yaml
+++ b/config/fabric/server-civo.yaml
@@ -4,9 +4,9 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: do
-    region: fra1
-    size: s-4vcpu-8gb
+    cloud: civo
+    region: LON1
+    size: g3.large
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
     port: 25565
   minecraft:
@@ -19,7 +19,7 @@ spec:
         port: 25575
         enabled: true
         broadcast: true
-    edition: java
+    edition: fabric
     version: 1.17.1
     eula: true
     properties: |
@@ -39,7 +39,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bDigitalOcean \u00A7rMinecraft --- \u00A76Java \u00A7redition
+      motd=\u00A7bCivo \u00A7rMinecraft --- \u00A76Fabric \u00A7redition
       force-gamemode=false
       rate-limit=0
       hardcore=false
