Add RCON feature to minectl
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .idea
 **/passwords
-**/minectl
 **/server.properties
 tmp*/
 bin/
@@ -9,3 +8,4 @@ coverage.out
 revive.log
 **/.DS_Store
 **/key.json
+/minectl
