New cloud provider - Vultr
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/papermc/server-vultr.yaml
+++ b/config/papermc/server-vultr.yaml
@@ -4,9 +4,9 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: civo
-    region: LON1
-    size: g3.large
+    cloud: vultr
+    region: fra
+    size: "vc2-2c-4gb"
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
     port: 25565
   minecraft:
@@ -19,8 +19,8 @@ spec:
         port: 25575
         enabled: true
         broadcast: true
-    edition: java
-    version: 1.17.1
+    edition: papermc
+    version: 1.17.1-157
     eula: true
     properties: |
       level-seed=stackitminecraftrocks
@@ -28,7 +28,7 @@ spec:
       enable-jmx-monitoring=false
       server-ip=
       resource-pack-prompt=
-      gamemode=survival25565
+      gamemode=survival
       allow-nether=true
       enable-command-block=false
       sync-chunk-writes=true
@@ -39,7 +39,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bCivo \u00A7rMinecraft --- \u00A76Java \u00A7redition
+      motd=\u00A7bDigitalOcean \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
       query.port=25565
       force-gamemode=false
       rate-limit=0
@@ -65,4 +65,4 @@ spec:
       online-mode=true
       enable-status=true
       allow-flight=false
-      max-world-size=29999984
+      max-world-size=
