--- a/config/java/server-vultr.yaml
+++ b/config/java/server-vultr.yaml
@@ -4,9 +4,9 @@ metadata:
   name: minecraft-server
 spec:
   server:
-    cloud: civo
-    region: LON1
-    size: g3.large
+    cloud: vultr
+    region: fra
+    size: "vc2-2c-4gb"
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
     port: 25565
   minecraft:
@@ -39,7 +39,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bCivo \u00A7rMinecraft --- \u00A76Java \u00A7redition
+      motd=\u00A7bVultr \u00A7rMinecraft --- \u00A76Java \u00A7redition
       query.port=25565
       force-gamemode=false
       rate-limit=0
