Provide minectl container (x64 and arm)
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,6 +12,35 @@ builds:
     goarch:
       - amd64
       - arm64
+dockers:
+  - image_templates: [ "ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}-amd64" ]
+    dockerfile: Dockerfile
+    use: buildx
+    build_flag_templates:
+      - --platform=linux/amd64
+      - --label=org.opencontainers.image.licenses=Apache-2.0
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.source=https://github.com/dirien/{{ .ProjectName }}
+  - image_templates: [ "ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}-arm64v8" ]
+    goarch: arm64
+    dockerfile: Dockerfile
+    use: buildx
+    build_flag_templates:
+      - --platform=linux/arm64/v8
+      - --label=org.opencontainers.image.licenses=Apache-2.0
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.source=https://github.com/dirien/{{ .ProjectName }}
+docker_manifests:
+  - name_template: ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}
+    image_templates:
+      - ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}-amd64
+      - ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}-arm64v8
+  - name_template: ghcr.io/dirien/{{ .ProjectName }}:latest
+    image_templates:
+      - ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}-amd64
+      - ghcr.io/dirien/{{ .ProjectName }}:{{ .Version }}-arm64v8
 brews:
   - tap:
       owner: dirien
