--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,13 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
+      - name: download upx
+        run: |
+          wget https://github.com/upx/upx/releases/download/v3.96/upx-3.96-amd64_linux.tar.xz
+          tar xvf upx-3.96-amd64_linux.tar.xz
+          mv upx-3.96-amd64_linux/upx $GITHUB_WORKSPACE/bin/
+          upx
+        shell: bash
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
