--- a/config/bedrock/server-civo.yaml
+++ b/config/bedrock/server-civo.yaml
@@ -11,10 +11,10 @@ spec:
     port: 19132
   minecraft:
     edition: bedrock
-    version: 1.17.10.04
+    version: 1.17.11.01
     eula: true
     properties: |
-      server-name=Civo Minecraft
+      server-name=Oracle Cloud Infrastructure Minecraft - Bedrock edition
       gamemode=survival
       force-gamemode=false
       difficulty=normal
