Switch to goreleaser v0.176.0 container signing
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,6 +38,10 @@ dockers:
       - --label=org.opencontainers.image.version={{ .Version }}
       - --label=org.opencontainers.image.title={{ .ProjectName }}
       - --label=org.opencontainers.image.source=https://github.com/dirien/{{ .ProjectName }}
+docker_signs:
+  - artifacts: all
+    args: [ "sign", "-key=$COSIGN_KEY_LOCATION", "${artifact}" ]
+    stdin: '{{ .Env.COSIGN_PASSWORD }}'
 brews:
   - tap:
       owner: dirien
