--- a/config/papermc/server-oci-arm.yaml
+++ b/config/papermc/server-oci-arm.yaml
@@ -1,14 +1,14 @@
 apiVersion: ediri.io/minectl/v1alpha1
 kind: MinecraftServer
 metadata:
-  name: minecraft-server
+  name: minecraft-server-arm
 spec:
   monitoring:
     enabled: true
   server:
-    cloud: do
-    region: fra1
-    size: s-4vcpu-8gb
+    cloud: oci
+    region: eu-frankfurt-1
+    size: VM.Standard.A1.Flex
     ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
     port: 25565
   minecraft:
@@ -22,7 +22,7 @@ spec:
         enabled: true
         broadcast: true
     edition: papermc
-    version: 1.17.1-186
+    version: 1.17.1-179
     eula: true
     properties: |
       level-seed=stackitminecraftrocks
@@ -41,7 +41,7 @@ spec:
       entity-broadcast-range-percentage=100
       level-name=world
       player-idle-timeout=0
-      motd=\u00A7bDigitalOcean \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
+      motd=\u00A7bOracle Cloud Infrastructure \u00A7rMinecraft --- \u00A76PaperMC \u00A7redition
       query.port=25565
       force-gamemode=false
       rate-limit=0
