fix: remove make all call in action
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,7 @@ jobs:
           args: --timeout=5m
       - name: Tests
         run: |
-          make all
+          make test coverage
   release:
     needs: build
     env:
