chore: add gomodUpdateImportPaths
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,8 @@
     ":gitSignOff"
   ],
   "postUpdateOptions": [
-    "gomodTidy"
+    "gomodTidy",
+    "gomodUpdateImportPaths"
   ],
   "dependencyDashboard": false,
   "labels": [
