chore: Update minecraft-exporter-prometheus version
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/papermc/server-scaleway.yaml
+++ b/config/papermc/server-scaleway.yaml
@@ -3,6 +3,8 @@ kind: MinecraftServer
 metadata:
   name: minecraft-server
 spec:
+  monitoring:
+    enabled: true
   server:
     cloud: scaleway
     region: fr-par-1
