feat: add support for multipass
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/velocity/proxy-do.yaml
+++ b/config/velocity/proxy-do.yaml
@@ -14,5 +14,10 @@ spec:
       openjdk: 16
       xmx: 512M
       xms: 512M
+      rcon:
+        password: test
+        port: 25575
+        enabled: true
+        broadcast: true
     type: velocity
     version: 3.1.1-98
