feat: reorder api version in config yaml file
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/config/bedrock/server-scaleway.yaml
+++ b/config/bedrock/server-scaleway.yaml
@@ -1,4 +1,4 @@
-apiVersion: ediri.io/minectl/v1alpha1
+apiVersion: minectl.ediri.io/v1alpha1
 kind: MinecraftServer
 metadata:
   name: minecraft-server-bedrock
