--- a/config/bedrock/server-aws.yaml
+++ b/config/bedrock/server-aws.yaml
@@ -7,11 +7,16 @@ spec:
     cloud: aws
     region: eu-central-1
     size: t3.xlarge
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 19132
   minecraft:
     edition: bedrock
-    version: 1.17.32.02
+    version: 1.18.2.03
     eula: true
     properties: |
       server-name=Azure Minecraft - Bedrock edition
