--- a/config/bedrock/server-civo.yaml
+++ b/config/bedrock/server-civo.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: civo
     region: LON1
     size: g3.large
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 19132
   minecraft:
     edition: bedrock
