--- a/config/bedrock/server-ionos.yaml
+++ b/config/bedrock/server-ionos.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: ionos
     region: de/txl
     size: 1-4096-INTEL_SKYLAKE
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 19132
   minecraft:
     edition: bedrock
