--- a/config/bedrock/server-oci.yaml
+++ b/config/bedrock/server-oci.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: oci
     region: eu-frankfurt-1
     size: VM.Standard2.2
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 19132
   minecraft:
     edition: bedrock
