--- a/config/bedrock/server-vexxhost.yaml
+++ b/config/bedrock/server-vexxhost.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: vexxhost
     region: am1
     size: "v3-starter-2"
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft-be"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 19132
   minecraft:
     edition: bedrock
