--- a/config/bungeecord/proxy-civo.yaml
+++ b/config/bungeecord/proxy-civo.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: civo
     region: LON1
     size: g3.xsmall
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25577
   proxy:
     java:
