--- a/config/bungeecord/proxy-vultr.yaml
+++ b/config/bungeecord/proxy-vultr.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: vultr
     region: fra
     size: "vc2-1c-1gb"
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25577
   proxy:
     java:
