--- a/config/fabric/server-do.yaml
+++ b/config/fabric/server-do.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: do
     region: fra1
     size: s-4vcpu-8gb
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
