--- a/config/java/server-aws.yaml
+++ b/config/java/server-aws.yaml
@@ -9,7 +9,12 @@ spec:
     cloud: aws
     region: eu-central-1
     size: t3.xlarge
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
