--- a/config/java/server-azure-spot.yaml
+++ b/config/java/server-azure-spot.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: azure
     region: westeurope
     size: Standard_D2_v2
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
     spot: true
   minecraft:
