--- a/config/java/server-equinix.yaml
+++ b/config/java/server-equinix.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: equinix
     region: fr
     size: c3.small.x86
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 2223
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
