--- a/config/java/server-gce.yaml
+++ b/config/java/server-gce.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: gce
     region: europe-west6-a
     size: e2-standard-2
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 2223
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
