--- a/config/java/server-oci.yaml
+++ b/config/java/server-oci.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: oci
     region: eu-frankfurt-1
     size: VM.Standard2.2
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 2223
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
