--- a/config/java/server-scaleway.yaml
+++ b/config/java/server-scaleway.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: scaleway
     region: fr-par-1
     size: GP1-XS
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
