--- a/config/multipass/server-papermc.yaml
+++ b/config/multipass/server-papermc.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: multipass
     port: 25565
     size: 1-4G
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
   minecraft:
     java:
       openjdk: 17
