--- a/config/nukkit/server-ovh.yaml
+++ b/config/nukkit/server-ovh.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: ovh
     region: DE1
     size: b2-7
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 19132
   minecraft:
     java:
