--- a/config/papermc/server-azure.yaml
+++ b/config/papermc/server-azure.yaml
@@ -7,11 +7,16 @@ spec:
     cloud: azure
     region: brazilsouth
     size: Standard_D2_v2
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 2223
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
-      openjdk: 16
+      openjdk: 17
       xmx: 2G
       xms: 2G
       rcon:
@@ -20,7 +25,7 @@ spec:
         enabled: true
         broadcast: true
     edition: papermc
-    version: 1.17.1-157
+    version: 1.18.1-136
     eula: true
     properties: |
       level-seed=stackitminecraftrocks
