--- a/config/papermc/server-civo.yaml
+++ b/config/papermc/server-civo.yaml
@@ -9,7 +9,12 @@ spec:
     cloud: civo
     region: LON1
     size: g3.large
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
