--- a/config/papermc/server-linode.yaml
+++ b/config/papermc/server-linode.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: linode
     region: eu-central
     size: g6-standard-4
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
