--- a/config/papermc/server-oci-arm.yaml
+++ b/config/papermc/server-oci-arm.yaml
@@ -9,7 +9,12 @@ spec:
     cloud: oci
     region: eu-frankfurt-1
     size: VM.Standard.A1.Flex
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
