--- a/config/papermc/server-scaleway.yaml
+++ b/config/papermc/server-scaleway.yaml
@@ -9,7 +9,12 @@ spec:
     cloud: scaleway
     region: fr-par-1
     size: DEV1-M
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
