--- a/config/papermc/server-vultr.yaml
+++ b/config/papermc/server-vultr.yaml
@@ -7,7 +7,12 @@ spec:
     cloud: vultr
     region: fra
     size: "vc2-2c-4gb"
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
