--- a/config/spigot/server-do.yaml
+++ b/config/spigot/server-do.yaml
@@ -8,7 +8,12 @@ spec:
     region: fra1
     size: s-4vcpu-8gb
     volumeSize: 100
-    ssh: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+    ssh:
+      port: 22
+      keyfolder: "/Users/dirien/Tools/repos/stackit-minecraft/minecraft/ssh/minecraft"
+      fail2ban:
+        bantime: 1000
+        maxretry: 3
     port: 25565
   minecraft:
     java:
