--- a/.github/workflows/ossf-scorecard-action.yaml
+++ b/.github/workflows/ossf-scorecard-action.yaml
@@ -1,4 +1,8 @@
 name: Call OSSF Scorecard Action
+
+on:
+  workflow_call:
+
 jobs:
   call-workflow-passing-data:
     uses: dirien/.github/.github/workflows/ossf-scorecard-action.yaml@main
