feat: add OSSF Scorecard Action
Signed-off-by: Engin Diri <engin.diri@mail.schwarz>

--- a/.github/workflows/ossf-scorecard-action.yaml
+++ b/.github/workflows/ossf-scorecard-action.yaml
@@ -13,3 +13,5 @@ on:
 jobs:
   call-workflow-passing-data:
     uses: dirien/.github/.github/workflows/ossf-scorecard-action.yaml@main
+    env:
+      GITHUB_TOKEN: ${{ secrets.SCORECARD_READ_TOKEN }}
